# CommonDataLayer-deployment

./: .gitignore  .gitmodules  README.md
.github/workflows/: deployment-baremetal.yaml
bare/horust/basic-minimal/: dr.toml  sr.toml
bare/horust/basic-postgres/: cspg.toml  dr.toml  sr.toml
bare/horust/basic-vm/: sr.toml
bare/horust/kafka/base/: data-router.toml  edge-registry.toml  materializer-on-demand.toml  object-builder.toml  partial-update-engine.toml  query-router.toml  schema-registry.toml  web-api.toml
bare/horust/kafka/druid/: command-service.toml  query-service.toml
bare/horust/kafka/postgres/: command-service.toml  materializer-general.toml  query-service.toml
bare/horust/kafka/victoria-metrics/: command-service.toml  query-service.toml
bare/horust/kafka/vm/: csvm.toml  dr.toml
bare/setup/schema-registry/: initial-schema.kafka.json
compose/setup/schema_registry/: initial-schema.grpc.json  initial-schema.mq.json
examples/: horust-kafka-postgres.sh
infra/: kafka.yml  victoriametrics.yml
infrastructure/: docker-compose.yml
infrastructure/.setup/: postgres
tooling/kafka-feeder/: Cargo.toml
tooling/kafka-feeder/src/: main.rs
