[package]
name = "kafka-feeder"
version = "0.1.0"
authors = ["Mateusz Matejuk (esavier) <esavier@erglabs.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.24", default-features = true }
backoff = "0.1.5"
chrono = "0.4.0"
clap = "2.18.0"
env_logger = "0.7.1"
maplit = "1.0.2"
rand = "0.3.15"
regex = "1.1.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
log = "0.4.8"